@@ -23,8 +23,8 @@ t = arange(0.0, 1.0+0.01, 0.01)
 s = cos(2*2*pi*t)+2
 plot(t, s)
 
-xlabel(r'\bf{time (s)}')
-ylabel(r'\it{voltage (mV)}',fontsize=16)
+xlabel(r'\textbf{time (s)}')
+ylabel(r'\textit{voltage (mV)}',fontsize=16)
 title(r"\TeX\ is Number $\displaystyle\sum_{n=1}^\infty\frac{-e^{i\pi}}{2^n}$!", 
       fontsize=16, color='r')
 grid(True)
