@@ -1,3 +1,7 @@
+2006-01-29 Improved usetex option to respect the serif, sans-serif, monospace, 
+           and cursive rc settings. Removed the font.latex.package rc setting, 
+           it is no longer required - DSD
+
 2006-01-29 Fixed tex's caching to include font.family rc information - DSD
 
 2006-01-29 Fixed subpixel rendering bug in *Agg that was causing
